--- a/Assignment-6/Assignment-6.tex
+++ b/Assignment-6/Assignment-6.tex
@@ -110,7 +110,7 @@
     \end{align}
     证明双原子气体的转动配分函数
     \begin{align}
-        q_r=\omega\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}+O(\varepsilon^2)\right]
+        q_r=\omega\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon+O(\varepsilon^2)\right]
     \end{align}
     和每个分子平均转动动能
     \begin{align}
@@ -123,9 +123,67 @@
             \frac{1}{2}(2s_A+1)^2,&AA\text{型}
         \end{array}\right.
     \end{align}
-    提示：可用 Eular-Maclaurin 公式计算修正项.
+    提示：可用 Euler-Maclaurin 公式计算修正项.
 \end{prob}
 \begin{pf}
-
+    对于 $AB$ 型双原子分子，转动配分函数为
+    \begin{align}
+        q_r=(2s_A+1)(2s_B+1)\sum_{j=0}^{\infty}(2j+1)e^{-\varepsilon j(j+1)}.
+    \end{align}
+    令
+    \begin{align}
+        f(x)=(2x+1)e^{-\varepsilon x(x+1)},
+    \end{align}
+    则
+    \begin{gather}
+        \int_0^{\infty}f(x)\,\mathrm{d}x=\int_0^{\infty}(2x+1)e^{-\varepsilon x(x+1)}\,\mathrm{d}x=\left.-\frac{1}{\varepsilon}e^{-\varepsilon x(x+1)}\right\rvert_0^{\infty}=\frac{1}{\varepsilon},\\
+        f(0)=1,\\
+        f(\infty)=0,\\
+        f^{(1)}(x)=[2-\varepsilon(2x+1)^2]e^{-\varepsilon x(x+1)},\\
+        f^{(1)}(0)=2-\varepsilon,\\
+        f^{(1)}(\infty)=0,\\
+        f^{(3)}(x)=[-\varepsilon^3(2x+1)^4+12\varepsilon^2(2x+1)^2-12\varepsilon]e^{-\varepsilon x(x+1)},\\
+        f^{(3)}(0)=-\varepsilon^3+12\varepsilon^2-12\varepsilon,\\
+        f^{(3)}(\infty)=0,
+    \end{gather}
+    利用 Euler-Maclaurin 公式可得
+    \begin{align}
+        \notag\sum_{j=0}^{\infty}(2j+1)e^{-\varepsilon j(j+1)}=&\int_0^{\infty}f(x)\,\mathrm{d}x+\frac{1}{2}[f(0)-f(\infty)]+(-1)^1\frac{1}{(2\times 1)!}\frac{1}{6}[f^{(1)}(0)-f^{(1)}(\infty)]\\
+        \notag&+(-1)^2\frac{1}{(2\times 2)!}\frac{1}{30}[f^{(3)}(0)-f^{(3)}(\infty)]+O(\varepsilon^2)\\
+        =&\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon.
+    \end{align}
+    从而转动配分函数为
+    \begin{align}
+        q_r=(2s_A+1)(2s_B+1)\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon+O(\varepsilon^2)\right].
+    \end{align}
+    对 $AA$ 型双原子分子，只需将其核自旋的简并度换为 $\frac{1}{2}(2s_A+1)^2$，转动配分函数为
+    \begin{align}
+        q_r=(2s_A+1)\sum_{j=0}^{\infty}(2j+1)e^{-\varepsilon j(j+1)}=\frac{1}{2}(2s_A+1)\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon+O(\varepsilon^2)\right].
+    \end{align}
+    从而一般的转动配分函数可写为
+    \begin{align}
+        q_r=\omega\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon+O(\varepsilon^2)\right],
+    \end{align}
+    其中核自旋简并度
+    \begin{align}
+        \omega=\left\{\begin{array}{ll}
+            (2s_A+1)(2s_B+1),&AB\text{型}\\
+            \frac{1}{2}(2s_A+1)^2,&AA\text{型}
+        \end{array}\right..
+    \end{align}
+    每个分子的平均转动动能为
+    \begin{align}
+        u_r=-\frac{\partial}{\partial\beta}\ln q_r,
+    \end{align}
+    其中
+    \begin{gather}
+        \ln q_r=\ln\omega\left[\frac{1}{\varepsilon}+\frac{1}{3}+\frac{1}{15}\varepsilon+O(\varepsilon^2)\right]=\ln\omega-\ln\varepsilon+\ln\left(1+\frac{\varepsilon}{3}+\frac{1}{15}\varepsilon^2+O(\varepsilon^3)\right)=\ln\omega-\ln\varepsilon+\frac{\varepsilon}{3}+\frac{\varepsilon^2}{90}+O(\varepsilon^3),\\
+        \frac{\partial}{\partial\beta}\ln q_r=\left[-\frac{1}{\varepsilon}+\frac{1}{3}+\frac{\varepsilon}{45}+O(\varepsilon^2)\right]\frac{\partial\varepsilon}{\partial\beta},\\
+        \frac{\partial\varepsilon}{\partial\beta}=\frac{\partial\left(\frac{\hbar^2\beta}{2I}\right)}{\partial\beta}=\frac{\hbar^2}{2I},
+    \end{gather}
+    故每个分子的平均转动动能为
+    \begin{align}
+        u_r=\frac{\hbar^2}{2I}\left[\frac{1}{\varepsilon}-\frac{1}{3}-\frac{\varepsilon}{45}+O(\varepsilon^2)\right]=kT\left[1-\frac{\varepsilon}{3}-\frac{\varepsilon^2}{45}+O(\varepsilon^3)\right].
+    \end{align}
 \end{pf}
 \end{document}
