--- a/Assignment-7/Assignment-7.tex
+++ b/Assignment-7/Assignment-7.tex
@@ -6,7 +6,24 @@
     根据集团积分的定义和图形展开的规则验证 Mayer 第一定理至 $y^3$ 项.
 \end{prob}
 \begin{pf}
-    
+    Mayer 第一定理：
+    \begin{align}
+        \mathcal{Q}=\prod_le^{Vb_ly^l},
+    \end{align}
+    其中
+    \begin{align}
+        b_l(V,T)=&\frac{1}{Vl!}\int\prod_{i=1}^l\mathrm{d}^3\vec{r}_i\sum_{\text{all $l$-cluster}}\left(\prod f_{ij}\right),\\
+        b_1(V,T)=&\frac{1}{V}\int\mathrm{d}^3\vec{r}=1,\\
+        b_2(V,T)=&\frac{1}{2!V}\int\mathrm{d}^3\vec{r}_1\vec{r}_2f_{12},\\
+        b_3(V,T)=&\frac{1}{3!V}\int\mathrm{d}^3\vec{r}_1\vec{r}_2\vec{r}_3(f_{12}f_{13}+f_{12}f_{23}+f_{13}f_{23}+f_{12}f_{13}f_{23})=\frac{1}{3!V}\int\mathrm{d}\vec{r}_1\mathrm{d}\vec{r}_2\mathrm{d}\vec{r}_3(3f_{12}f_{13}+f_{12}f_{13}f_{23}),\\
+        \cdots&
+    \end{align}
+    故
+    \begin{align}
+        \notag\mathcal{Q}=&e^{Vb_1y}\times e^{Vb_2y^2}\times e^{Vb_3y^3}\times\cdots=e^{Vy}\times e^{Vb_2y^2}\times e^{Vb_3y^3}\times\cdots\\
+        \notag=&\left[1+Vy+\frac{1}{2}(Vy)^2+\frac{1}{3!}(Vy)^3+\cdots\right]\times\left[1+Vb_2y^2+\cdots\right]\times\left[1+Vb_3y^3+\cdots\right]\times\cdots\\
+        =&1+Vy+\left(\frac{1}{2}V^2+Vb_2\right)y^2+\left(\frac{1}{3!}V^3+V^2b_2+Vb_3\right)y^3+O(y^4).
+    \end{align}
 \end{pf}
 
 \begin{prob}
