--- a/Assignment-7/Assignment-7.tex
+++ b/Assignment-7/Assignment-7.tex
@@ -44,8 +44,8 @@
     根据两原子的相互作用能量 $u_{ij}$ 的表达式，有
     \begin{align}
         f_{ij}=e^{-\beta u_{ij}}-1=\left\{\begin{array}{ll}
-            -1,&r\leq d\\
-            0,&r>d
+            -1,&\abs{x_{ij}}\leq d\\
+            0,&\abs{x_{ij}}>d
         \end{array}\right.
     \end{align}
     根据 Mayer 第一定理，
@@ -59,10 +59,9 @@
     \begin{align}
         b_l(V,T)=&\frac{1}{l!L}\int\prod_{i=1}^l\mathrm{d}x_i\,\sum_{\text{all $l$-clusters}}\left(\prod f_{ij}\right),\\
         b_1(V,T)=&\frac{1}{L}\int\mathrm{d}x_1=1,\\
-        b_2(V,T)=&\frac{1}{2!L}\int\mathrm{d}x_1\mathrm{d}x_2\,f_{12}=\frac{1}{2!L}\int\mathrm{d}x_1\int_{-d}^d\mathrm{d}(x_1-x_2)\,f_{12}(x_1-x_2)=-d,\\
+        b_2(V,T)=&\frac{1}{2!L}\int\mathrm{d}x_1\mathrm{d}x_2\,f_{12}=\frac{1}{2!L}\int\mathrm{d}x_1\int_{-d}^d\mathrm{d}x_{12}\,f_{12}(x_{12})=-d,\\
         \notag b_3(V,T)=&\frac{1}{3!L}\int\mathrm{d}x_1\mathrm{d}x_2\mathrm{d}x_3\,(3f_{12}f_{13}+f_{21}f_{13}f_{23})\\
-        \notag=&\frac{1}{3!L}\int\mathrm{d}x_1\int_{-d}^d\mathrm{d}(x_1-x_2)\int_{-d}^d\mathrm{d}(x_1-x_3)\times\\
-        &(3f_{12}(x_1-x_2)f_{13}(x_1-x_3)+f_{21}(x_1-x_2)f_{13}(x_1-x_3)f_{23}((x_1-x_2)-(x_1-x_3)))=\frac{3d^2}{2},
+        \notag=&\frac{1}{3!L}\int\mathrm{d}x_1\int_{-d}^d\mathrm{d}x_{12}\int_{-d}^d\mathrm{d}x_{13}\,(3f_{12}(x_{12})f_{13}(x_1-x_3)+f_{21}(x_{12})f_{13}(x_{13})f_{23}(\abs{x_{12}-x_{13}}))=\frac{3d^2}{2},
     \end{align}
     % 故
     % \begin{align}
