--- a/Assignment-7/Assignment-7.tex
+++ b/Assignment-7/Assignment-7.tex
@@ -132,14 +132,14 @@
     \end{align}
     而
     \begin{align}
-        b_2=&\frac{1}{2!V}\int\mathrm{d}^3\vec{r}_2\int\mathrm{d}^3r_1\,f_{12}(\abs{\vec{r}_1-\vec{r}_2})=2\pi\int_0^d\mathrm{d}r_{12}\,r^2f_{12}(r_{12})=-\frac{2\pi d^3}{3},\\
+        b_2=&\frac{1}{2!V}\int\mathrm{d}^3\vec{r}_2\int\mathrm{d}^3r_1\,f_{12}(\abs{\vec{r}_1-\vec{r}_2})=2\pi\int_0^d\mathrm{d}r_{12}\,r_{12}^2f_{12}(r_{12})=-\frac{2\pi d^3}{3},\\
         \notag b_3=&\frac{1}{3!V}\int\mathrm{d}^3\vec{r}_3\int\mathrm{d}^3\vec{r}_2\int\mathrm{d}^3\vec{r}_1\,[3f_{12}(\vec{r}_1-\vec{r}_2)f_{13}(\abs{\vec{r}_1-\vec{r}_3})-f_{12}(\abs{\vec{r}_1-\vec{r}_2})f_{13}(\abs{\vec{r}_1-\vec{r}_3})f_{23}(\abs{\vec{r}_2-\vec{r}_3})]\\
         \notag=&8\pi^2\int_0^d\mathrm{d}r_{12}\,r_{12}^2f(r_{12})\int_0^d\mathrm{d}r_{13}\,r_{13}^2f(r_{13})-\frac{1}{6}\int\mathrm{d}^3\vec{r}_{12}\int\mathrm{d}^3\vec{r}_{13}\,f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}})\\
         =&\frac{8\pi^2d^6}{9}-\frac{1}{6}\int\mathrm{d}^3\vec{r}_{12}\int\mathrm{d}^3\vec{r}_{13}\,f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}}).
     \end{align}
-    其中 $-\int\mathrm{d}^3\vec{r}_{13}f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}})$ 等价于两个直径 $d$，球心相距 $r_{12}$ 的球的重叠部分体积，即
+    其中 $-\int\mathrm{d}^3\vec{r}_{13}\,f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}})$ 等价于两个直径 $d$，球心相距 $r_{12}$ 的球的重叠部分体积，即
     \begin{align}
-        \notag-\int\mathrm{d}^3\vec{r}_{13}f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}})=&2\int_0^{d-\frac{r_{12}}{2}}\pi[d^2-(d-x)^2]\,\mathrm{d}x\\
+        \notag-\int\mathrm{d}^3\vec{r}_{13}\,f_{12}(r_{12})f_{13}(r_{13})f_{23}(\abs{\vec{r}_{12}-\vec{r}_{13}})=&2\int_0^{d-\frac{r_{12}}{2}}\pi[d^2-(d-x)^2]\,\mathrm{d}x\\
         =&\frac{\pi}{12}(16d^3-12d^2r_{12}+r_{12}^3).
     \end{align}
     从而
