--- a/Assignment-7/Assignment-7.tex
+++ b/Assignment-7/Assignment-7.tex
@@ -14,8 +14,8 @@
     \begin{align}
         b_l(V,T)=&\frac{1}{Vl!}\int\prod_{i=1}^l\mathrm{d}^3\vec{r}_i\sum_{\text{all $l$-cluster}}\left(\prod f_{ij}\right),\\
         b_1(V,T)=&\frac{1}{V}\int\mathrm{d}^3\vec{r}=1,\\
-        b_2(V,T)=&\frac{1}{2!V}\int\mathrm{d}^3\vec{r}_1\vec{r}_2f_{12},\\
-        b_3(V,T)=&\frac{1}{3!V}\int\mathrm{d}^3\vec{r}_1\vec{r}_2\vec{r}_3(f_{12}f_{13}+f_{12}f_{23}+f_{13}f_{23}+f_{12}f_{13}f_{23})=\frac{1}{3!V}\int\mathrm{d}\vec{r}_1\mathrm{d}\vec{r}_2\mathrm{d}\vec{r}_3(3f_{12}f_{13}+f_{12}f_{13}f_{23}),\\
+        b_2(V,T)=&\frac{1}{2!V}\int\mathrm{d}^3\vec{r}_1\vec{r}_2\,f_{12},\\
+        b_3(V,T)=&\frac{1}{3!V}\int\mathrm{d}^3\vec{r}_1\mathrm{d}^3\vec{r}_2\mathrm{d}^3\vec{r}_3\,(f_{12}f_{13}+f_{12}f_{23}+f_{13}f_{23}+f_{12}f_{13}f_{23})=\frac{1}{3!V}\int\mathrm{d}\vec{r}_1\mathrm{d}\vec{r}_2\mathrm{d}\vec{r}_3\,(3f_{12}f_{13}+f_{12}f_{13}f_{23}),\\
         \cdots&
     \end{align}
     故
