--- a/Assignment-10/Assignment-10.tex
+++ b/Assignment-10/Assignment-10.tex
@@ -67,7 +67,7 @@
     \begin{align}
         \notag\mathcal{Q}_G=&\sum_{N_{\uparrow}=1}^{\mathcal{N}}\exp\left\{\frac{N_{\uparrow}}{kT}(2\mu H-\sum_ln_l[\varepsilon_l(\uparrow\downarrow)-\varepsilon_l(\uparrow\uparrow)])\right\}\sum_{\text{$N_{\uparrow}$ 个 $\uparrow$ 的分布}}\exp\left\{-\frac{1}{kT}\sum_lN_{\uparrow\uparrow}^l\cdot 2[\varepsilon_l(\uparrow\uparrow)-\varepsilon_l(\uparrow\downarrow)]\right\}\\
         \notag=&\sum_{\text{$\uparrow$ 的分布}}\exp\left\{-\frac{1}{kT}\left[\sum_lN_{\uparrow\uparrow}^l\cdot 2[\varepsilon_l(\uparrow\uparrow)-\varepsilon_l(\uparrow\downarrow)]-N_{\uparrow}[(\varepsilon_l(\uparrow\uparrow)-\varepsilon_l(\uparrow\downarrow))+2\mu H]\right]\right\}\\
-        =&\sum\exp\left\{\frac{\mathcal{N}}{kT}\left[\mu H+\frac{1}{2}\sum_ln_l\varepsilon_l(\uparrow\uparrow)\right]+\frac{1}{kT}U_I\right\}=Q_I\exp\left\{\frac{\mathcal{N}}{kT}\left[\mu H+\frac{1}{2}\sum_ln_l\varepsilon_l(\uparrow\uparrow)\right]\right\}.
+        =&\sum\exp\left\{\frac{\mathcal{N}}{kT}\left[\mu H+\frac{1}{2}\sum_ln_l\varepsilon_l(\uparrow\uparrow)\right]-\frac{1}{kT}U_I\right\}=Q_I\exp\left\{\frac{\mathcal{N}}{kT}\left[\mu H+\frac{1}{2}\sum_ln_l\varepsilon_l(\uparrow\uparrow)\right]\right\}.
     \end{align}
 \end{pf}
 \end{document}
